--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+
+
+
+<div th:fragment="header" class="border rounded bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid d-flex justify-content-between">
+
+
+            <div>
+                <button class="nav nav-link" id="home" onclick="location.href='/maincontent'">홈</button>
+            </div>
+
+
+            <div class="mx-auto">
+                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                    <li class="nav-item dropdown mx-5"> <!-- mx-2로 간격을 넓힘 -->
+                        <button class="nav-link dropdown-toggle" id="blogTap" data-bs-toggle="dropdown" aria-expanded="false">
+                            조잘조잘
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="blogTap">
+                            <li>
+                                <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogDetail">블로그</button>
+                            </li>
+                            <li>
+                                <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogVote">추천 블로그</button>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown mx-5">
+                        <button class="nav-link dropdown-toggle" id="placeTap" data-bs-toggle="dropdown" aria-expanded="false">
+                            플레이스
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="placeTap">
+                            <li>
+                                <button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetail">플레이스 블로그</button>
+                            </li>
+                            <li>
+                                <button onclick="location.href='/place/list'" class="dropdown-item" id="placeVote">추천 플레이스</button>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown mx-5">
+                        <button class="nav-link dropdown-toggle" id="eventTap" data-bs-toggle="dropdown" aria-expanded="false">
+                            공지 및 이벤트
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="eventTap">
+                            <li>
+                                <button onclick="location.href='/event/list'" class="dropdown-item" id="eventDetail">공지사항</button>
+                            </li>
+                            <li>
+                                <button onclick="location.href='/event/noticelist'" class="dropdown-item" id="eventVote">이벤트</button>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <button class="btn nav nav-link">회원가입</button>
+                <button class="btn nav nav-link">로그인</button>
+            </div>
+        </div>
+
+    </nav>
+</div>
+
+
 
 </body>
 </html>
