--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -4,6 +4,8 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
@@ -13,6 +15,41 @@
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    <div class="row mt-5 mb-5">
+        <div class="col shadow">
+            <div class="row">
+                <div class="col mt-3 mb-3 ms-3 me-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">좋은블러기</h5>
+                            <th:block th:each="blog,userStat  : ${mainRankBlogDTO}">
+
+                            </th:block>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mt-3 mb-3 ms-3 me-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">좋은 명소</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mt-3 mb-3 ms-3 me-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">굿식당</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <th:block th:if="${#lists.isEmpty(mainRankDTO)}">
     <h1>Place DB가 없습니다.</h1>
 </th:block>
@@ -148,6 +185,7 @@
 
     </tbody>
 </table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 
 <script th:inline="javascript">
