--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -8,7 +8,6 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 
 <body>
@@ -26,7 +25,7 @@
                 <div class="flex-grow-1 d-flex justify-content-center align-items-center col-8">
                     <ul class="navbar-nav flex-row mb-2 mb-md-0">
                         <li class="nav-item dropdown col-4">
-                            <button class="nav-link btn dropdown-toggle" id="blogTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="nav-link btn" id="blogTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 조잘조잘
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
@@ -36,7 +35,7 @@
                         </li>
 
                         <li class="nav-item dropdown col-4 offset-4">
-                            <button class="nav-link btn dropdown-toggle" id="placeTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="nav-link btn" id="placeTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 플레이스
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
@@ -45,8 +44,8 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown col-4 offset-4">
-                            <button class="nav-link btn dropdown-toggle" id="eventTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown col-6 offset-4">
+                            <button class="nav-link btn" id="eventTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 공지 및 이벤트
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
@@ -72,6 +71,16 @@
     </nav>
 
     <style>
+        /* 호버 시 드롭다운 메뉴가 나타나게 설정 */
+        .nav-item.dropdown:hover .dropdown-menu {
+            display: block;
+        }
+
+        /* 메뉴 항목에 마우스를 올렸을 때 글씨 색 변경 */
+        .nav-link:hover {
+            color: #d0e7ff !important;
+        }
+
         /* 1150px 이하에서 offset 제거 */
         @media (max-width: 1150px) {
             .offset-4 {
